Added a profile section and an about section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,91 @@
             </div>
         </div>
     </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img id="profile-pic" 
+                src="./assets/tommy-pfp.jpg" 
+                alt="Tommy Profile Pic"/>
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Tommy Lin</h1>
+            <p class="section__text__p2">Software Engineer / Data Engineer</p>
+            <div class="btn-container">
+                <button 
+                    class="btn" 
+                    onclick="window.open('./assets/resume.pdf')"
+                > Download CV
+                </button>
+                <button 
+                    class="btn" 
+                    onclick="location.href='./#contact'"
+                > Contact Info
+                </button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" alt="LinkedIn Profile"
+                    class="icon" 
+                    onclick="location.href='https://www.linkedin.com/in/tom-lin43/'"/>
+                <img src="./assets/github.png" alt="Github Profile"
+                    class="icon" 
+                    onclick="location.href='https://www.github.com/tommylin121314'"/>
+            </div>
+        </div>
+    </section>
+    <section id="about">
+        <div class="section-spacer">
+        </div>
+        <div class="about-header">
+            <p class="section__text__p1">Here's a little more</p>
+            <h1 class="title">About Me</h1>
+        </div>
+        <div class="section-container">
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/experience.png" 
+                            alt="Experience icon"
+                            class="icon"/>
+                        <h3>Experience</h3>
+                        <p class="about-details-text"> 1+ years 
+                            <br/> Data Engineer Intern 
+                            <br/>@ IOT Nation
+                        </p>
+                        <p class="about-details-text">2022 - 2023</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png" 
+                            alt="Education icon"
+                            class="icon"/>
+                        <h3>Education</h3>
+                        <p class="about-details-text"> Bachelor's of Science 
+                            <br/> Computer Science 
+                            <br/>@ Stony Brook University
+                        </p>
+                        <p class="about-details-text">2019 - 2023</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png" 
+                            alt="Education icon"
+                            class="icon"/>
+                        <h3>Education</h3>
+                        <p class="about-details-text"> Master's of Science 
+                            <br/> Applied Data Analytics 
+                            <br/>@ Boston University
+                        </p>
+                        <p class="about-details-text">2023 - Current</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos omnis distinctio earum minus esse ipsam quia laboriosam est reiciendis eligendi? Sequi at sunt, tempora porro, soluta, consequuntur nostrum enim accusamus quae ex itaque voluptatum modi. Dignissimos libero dolorum mollitia beatae optio nobis at similique, odio illo, non ab deleniti iste.</p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" 
+            alt="Arrow icon" 
+            class="icon arrow"
+            onclick="location.href='./#experience'"/>
     </section>
     <script src="script.js"></script>
 </body>
